# shibal

./: .env.sample  README.md  docker-compose.yml
drive/: Cargo.toml  Dockerfile
drive/src/: main.rs
front_stats/: .dockerignore  Dockerfile  README.md  angular.json  package-lock.json  package.json
front_stats/src/: index.html  styles.scss
front_stats/src/app/: app.component.html  app.component.scss  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
front_stats/src/app/pipes/: op-type.pipe.ts  order-type.pipe.ts
front_stats/src/app/services/: operations.service.ts  orders.service.ts  (+1 more)
nginx/: Dockerfile  nginx.conf
shibal/: .dockerignore  .gitignore  Dockerfile  alembic.ini  app_queue.py  app_tg_bot.py  app_web.py  pyproject.toml
shibal/.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml
shibal/alembic/: env.py
shibal/alembic/versions/: 54b56d6aec6d_initial_migration.py
shibal/app/: celery.py  config.py  db.py  redis.py
shibal/app/models/: operations.py  orders.py  users.py
shibal/app/routers/: users.py
shibal/app/routers/api/: __init__.py  operations.py  orders.py  users.py
shibal/app/schemas/: common.py  operations.py  orders.py  users.py
shibal/app/services/: drive.py  operations.py  users.py
shibal/app/tasks/: __init__.py  change_volume.py  cut.py  fades.py  trim.py
shibal/app/tg/: common.py  convo_cut.py  convo_fades.py  convo_trim.py  convo_volume.py  values.py
shibal/app/utils/: files.py
shibal/tests/: conftest.py  factories.py  test_app_web.py
shibal/tests/routers/users/: test_list.py
(+30 files in other folders)
